--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="entire">
-      <div class="l_sidebar"><h1>i am side bar</h1></div>
+      <div class="l_sidebar"><h1></h1></div>
       <div class="content">
         <div class="intro">
           <h1>Hi, You got some time to kill, check out the game below</h1>
@@ -49,7 +49,7 @@
           </div>
         </div>
       </div>
-      <div class="r_sidebar"><h1>i am side bar</h1></div>
+      <div class="r_sidebar"><h1></h1></div>
     </div>
     <script src="src/app.js"></script>
   </body>
