--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="l_sidebar"><h1></h1></div>
       <div class="content">
         <div class="intro">
-          <h1>Hi, You got some time to kill, check out the game below</h1>
+          <h1>Hi, You got some time to kill, check out the games below</h1>
         </div>
         <div class="game_selection_cont">
           <h1>What do you want to play</h1>
